--- a/library.properties
+++ b/library.properties
@@ -3,7 +3,7 @@ version=0.0.2
 author=e12
 maintainer=e12.io <dkothari@gmail.com>
 sentence=C library for e12 on-wire protocol
-paragraph=C library for e12 on-wire protocol
+paragraph=e12 protocol is a lightweight communication protocol over i2c designed for IoT devices that interact with the e12-node. Read more at e12.io/docs
 category=Protocol
 url=https://github.com/e12-io/e12-protocol
 includes=e12_protocol.h, arduino/arduino_e12_protocol.h
