--- a/examples/e12-demo/manifest.json
+++ b/examples/e12-demo/manifest.json
@@ -5,5 +5,5 @@
     "mcu_architecture": "samd21",
     "version": "1.0.3",
     "build_date": "2025-12-29",
-    "description": "e12 demo vmcu firmware",
+    "description": "e12 demo vmcu firmware"
 }
