some cleanup to publish the e12 library

--- a/library.properties
+++ b/library.properties
@@ -2,10 +2,10 @@ name=e12 protocol library
 version=0.0.2
 author=e12
 maintainer=e12.io <dkothari@gmail.com>
-sentence=C library for e12 on-wire protocol
-paragraph=e12 protocol is a lightweight communication protocol over i2c designed for IoT devices that interact with the e12-node. Read more at e12.io/docs
-category=Protocol
+sentence=C++ library for e12 on-wire protocol over I2C.
+paragraph=A lightweight I2C communication protocol for IoT devices. This library provides the client-side implementation for Arduino-compatible hardware.
+category=Communication
 url=https://github.com/e12-io/e12-protocol
-includes=e12_protocol.h, arduino/arduino_e12_protocol.h
 architectures=*
-depends=
+includes=e12_protocol.h, arduino/arduino_e12_protocol.h
+depends=Wire
