--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .vscode
 build
-docs\html
-examples\e12-demo\build
-examples\e12-demo\.vscode
+docs/html
+examples/e12-demo/build
+examples/e12-demo/.vscode
 debug.log
