--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ build
 docs/html
 examples/e12-demo/build
 examples/e12-demo/.vscode
+examples/e12-demo/.code-workspace
 examples/e12-demo/*.bin
 examples/e12-demo/*.json
 debug.log
