--- a/library.properties
+++ b/library.properties
@@ -1,4 +1,4 @@
-name=e12 protocol library
+name=e12-protocol
 version=0.0.2
 author=e12
 maintainer=e12.io <dkothari@gmail.com>
@@ -7,5 +7,4 @@ paragraph=A lightweight I2C communication protocol for IoT devices. This library
 category=Communication
 url=https://github.com/e12-io/e12-protocol
 architectures=*
-includes=e12_protocol.h, arduino/arduino_e12_protocol.h
-depends=Wire
+depends=
